--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>EECS 349: Northwestern IT Ticket Times</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">EECS 349: Northwestern IT Ticket Times</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -54,10 +54,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#body">Summary</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#about">Report</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
@@ -76,9 +76,12 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">Northwestern IT Ticket Times</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">
+                            Project by Ryan Miller and Rene Romo <br> 
+                            For Doug Downey's EECS 349: Machine Learning at Northwestern University
+                </span>
                     </div>
                 </div>
             </div>
@@ -86,98 +89,71 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
-                    <hr class="star-primary">
+    <section id="body">
+        <body style="background-color:white;">
+            <div>
+                <div class="container col-lg-8 col-lg-offset-2">
+
+                    <h1 class="text-center">
+                        Summary
+                    </h1>
+                    <p>
+                        The issue we addressed in this project is determining how long a Northwestern IT support request  
+                        will take to complete at the time of its creation.
+                    </p>
+                    <p>
+                        Everyday support desks all over the world support millions of users. Each of these users presents 
+                        their own unique problem and wants to know how long it will take for this problem to be solved. 
+                        This presents a challenge to the help desk staff who cannot provide accurate estimates for every issue. 
+                        We propose the use of machine learning techniques in order to provide a prediction for how long  
+                        an issue will take to complete at the time of creation.
+                    </p>
+                    <p>
+                        Implementing these predictions will allow for helpdesk staff to not only provide users with a 
+                        more accurate estimate of when their issue will be resolved but could also help identify any possible 
+                        bottlenecks that could be avoided or made more efficient to provide better service. For example maybe 
+                        we might notice a support group which takes a long time to process tickets because they are receiving 
+                        too many issues which might suggest they are short staffed.
+                    </p>
+                    <p>
+                        We trained a decision tree to classify tickets based on our features. Most of our features are 
+                        discrete, and with the ones that are continuous, we nominalized them by putting them into bins. 
+                        Our features are attributes of the ticket, such as date and time submitted, its categorization, etc.
+                    </p>
+                    <p>
+                        We trained our data on a bunch of different machine learning algorithms, using 10-fold cross 
+                        validation every time. We chose the algorithm that yielded the highest accuracy (decision tree) 
+                        on the training data.
+                    </p>
+                    <p>
+                        The most important attributes are whether the ticket was assigned to the main support center 
+                        or elsewhere, and if the ticket was submitted during a weekday or the weekend. These were the 
+                        first splits the decision tree made.
+                    </p>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
+                <div class= "container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <img class= "center-block"class="img-responsive"src="https://403c7530832b86e26581ca51f974f3a9ce66db25.googledrive.com/host/0B8LPqTcZt1K0ZEMyejgxVlNNRDg" alt="Learning Curve">
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
-                    </a>
+                    </div>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
+            </body>    
+        </section>
 
     <!-- About Section -->
     <section class="success" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>Report</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                        <i class="fa fa-download"></i> View Report
                     </a>
                 </div>
             </div>
@@ -189,7 +165,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
+                    <h2>Contact Us</h2>
+                    <h3>reneromo2016&lt;at&gtu&lt;dot&gtnorthwestern.edu</h3>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -279,7 +256,6 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2014
                     </div>
                 </div>
             </div>
