--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/profile.png" width="304" height="236" alt="">
                     <div class="intro-text">
                         <span class="name">Northwestern IT Ticket Times</span>
                         <hr class="star-light">
