--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
-                            <img class= "center-block"class="img-responsive"src="https://403c7530832b86e26581ca51f974f3a9ce66db25.googledrive.com/host/0B8LPqTcZt1K0ZEMyejgxVlNNRDg" alt="Learning Curve">
+                            <img class= "center-block"class="img-responsive"src="https://github.com/rromo12/rromo12.github.io/blob/master/learning_curve.JPG" alt="Learning Curve">
                         </div>
                     </div>
                     <div class="text-center">
